whoami/base/deployment.yaml
apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'whoami'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 'whoami'
      version: 'v1'
  template:
    metadata:
      labels:
        app: 'whoami'
        version: 'v1'
    spec:
      containers:
        - name: 'whoami'
          image: 'xorkevin/whoami'
          ports:
            - name: 'whoami'
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/healthz/ready'
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: '/healthz/live'
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
