whoami/base/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
        app.kubernetes.io/name: whoami
        app.kubernetes.io/instance: whoami
        app.kubernetes.io/version: v1
        app.kubernetes.io/component: whoami
        app.kubernetes.io/part-of: whoami
        app.kubernetes.io/managed-by: launchcpx
    spec:
      containers:
        - name: whoami
          image: xorkevin/whoami
          ports:
            - name: whoami
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  selector:
    app: whoami
  ports:
    - name: http
      port: 8080
