whoami/base/ingressroute.yaml
apiVersion: 'traefik.containo.us/v1alpha1'
kind: 'IngressRoute'
metadata:
  name: 'whoami'
spec:
  entryPoints:
    - 'web'
  routes:
    - kind: 'Rule'
      match: 'Host(`whoami.dev.home`)'
      services:
        - kind: 'Service'
          scheme: 'http'
          name: 'whoami'
          port: 8080
