whoami/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whoami
spec:
  gateways:
    - istio-system/istio-gateway
  hosts:
    - whoami.dev.localhost
  http:
    - route:
        - destination:
            host: whoami
            port:
              number: 8080
